Clean up collections code