@@ -20,7 +20,6 @@ import org.elasticsearch.script.ScriptType;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Before;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -39,20 +38,17 @@ public class ScriptProcessorTests extends ESTestCase {
         String scriptName = "script";
         scriptService = new ScriptService(
             Settings.builder().build(),
-            Collections.singletonMap(
-                Script.DEFAULT_SCRIPT_LANG,
-                new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> {
-                    Integer bytesIn = (Integer) ctx.get("bytes_in");
-                    Integer bytesOut = (Integer) ctx.get("bytes_out");
-                    ctx.put("bytes_total", bytesIn + bytesOut);
-                    ctx.put("_dynamic_templates", Map.of("foo", "bar"));
-                    return null;
-                }), Collections.emptyMap())
-            ),
+            Map.of(Script.DEFAULT_SCRIPT_LANG, new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Map.of(scriptName, ctx -> {
+                Integer bytesIn = (Integer) ctx.get("bytes_in");
+                Integer bytesOut = (Integer) ctx.get("bytes_out");
+                ctx.put("bytes_total", bytesIn + bytesOut);
+                ctx.put("_dynamic_templates", Map.of("foo", "bar"));
+                return null;
+            }), Map.of())),
             new HashMap<>(ScriptModule.CORE_CONTEXTS),
             () -> 1L
         );
-        script = new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap());
+        script = new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Map.of());
         ingestScriptFactory = scriptService.compile(script, IngestScript.CONTEXT);
     }
 
